--- a/src/components/layouts/GridLayout.css
+++ b/src/components/layouts/GridLayout.css
@@ -2,3 +2,26 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.grid-layout .grid-item {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.grid-layout .grid-item .description {
+    padding-bottom: 4px;
+    margin-bottom: 4px;
+    border-bottom: solid 1px #ddd;
+}
+
+.grid-layout .grid-item .description.selected {
+    font-weight: bold;
+}
+
+.grid-layout .grid-item .instance {
+    margin-bottom: 20px;
+    margin-right: 20px;
+}
