--- a/src/components/layouts/LabelInstanceTableLayout.css
+++ b/src/components/layouts/LabelInstanceTableLayout.css
@@ -1,24 +1,17 @@
 .label-instance-table-layout {
-    display: flex;
-    flex-direction: column;
-}
-
-.label-instance-table-layout .table-item {
+  display: flex;
+  flex-direction: column; }
+  .label-instance-table-layout .table-item {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-right: 20px;
     padding-bottom: 20px;
-    cursor: pointer;
-}
-
-.label-instance-table-layout .table-item .description {
-    padding-right: 10px;
-    margin-right: 10px;
-    flex: 0 0 200px;
-    text-align: right;
-}
-
-.label-instance-table-layout .table-item .description.selected {
-    font-weight: bold;
-}
+    cursor: pointer; }
+    .label-instance-table-layout .table-item .description {
+      padding-right: 10px;
+      margin-right: 10px;
+      flex: 0 0 200px;
+      text-align: right; }
+    .label-instance-table-layout .table-item .description.selected {
+      font-weight: bold; }
