replace description with title. description will become optional additional information

--- a/src/components/layouts/GridLayout.scss
+++ b/src/components/layouts/GridLayout.scss
@@ -9,13 +9,13 @@
         margin-bottom: 20px;
         cursor: pointer;
 
-        .description {
+        .title {
             padding-bottom: 4px;
             margin-bottom: 4px;
             border-bottom: solid 1px #ddd;
         }
 
-        .description.selected {
+        .title.selected {
             font-weight: bold;
         }
 
