--- a/src/components/viewer/ComponentsViewer.scss
+++ b/src/components/viewer/ComponentsViewer.scss
@@ -1,3 +1,9 @@
+:root {
+    --primary-text-color: #555;
+    --primary-background-color: #ddd;
+    --primary-border-color: #aaa;
+}
+
 body {
     margin: 0;
 }
@@ -11,20 +17,21 @@ body {
     max-width: 100vw;
 
     .toc {
-        flex: 0 0 350px;
-        border-right: 1px solid #4F628E;
-        background-color: #2E4272;
+        flex: 0 0 280px;
+        border-right: 1px solid var(--primary-border-color);
+        background-color: var(--primary-background-color);
 
         .name {
-            padding: 15px;
-            border-bottom: 1px solid #7887AB;
-            color: #7887AB;
+            font-size: 14px;
+            padding: 8px 15px;
+            border-bottom: 1px solid var(--primary-border-color);
+            color: var(--primary-text-color);
             cursor: pointer;
         }
 
         .name.selected {
-            border-left: 2px solid #fff;
-            color: #fff;
+            border-left: 4px solid var(--primary-text-color);
+            font-weight: bold;
         }
     }
 
