--- a/src/components/viewer/ComponentsViewer.scss
+++ b/src/components/viewer/ComponentsViewer.scss
@@ -1,42 +1,61 @@
 :root {
-    --primary-text-color: #555;
-    --primary-background-color: #ddd;
-    --primary-border-color: #aaa;
+  --primary-text-color: #555;
+  --primary-background-color: #ddd;
+  --primary-border-color: #aaa;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .components-viewer {
+  display: flex;
+  font-family: Verdana, serif;
+  min-height: 100vh;
+  max-height: 100vh;
+  min-width: 100vw;
+  max-width: 100vw;
+
+  .toc-panel {
     display: flex;
-    font-family: Verdana, serif;
-    min-height: 100vh;
-    max-height: 100vh;
-    min-width: 100vw;
-    max-width: 100vw;
+    flex: 0 0 280px;
+    flex-direction: column;
+
+    border-right: 1px solid var(--primary-border-color);
+
+    .search-box input {
+      width: 100%;
+      height: 34px;
+      box-sizing: border-box;
+
+      padding: 10px 4px 10px 15px;
+      margin: 0;
+
+      border: none;
+      outline: none;
+    }
 
     .toc {
-        flex: 0 0 280px;
-        border-right: 1px solid var(--primary-border-color);
-        background-color: var(--primary-background-color);
+      flex: 1;
+      background-color: var(--primary-background-color);
 
-        .name {
-            font-size: 14px;
-            padding: 8px 15px;
-            border-bottom: 1px solid var(--primary-border-color);
-            color: var(--primary-text-color);
-            cursor: pointer;
-        }
+      .name {
+        font-size: 14px;
+        padding: 8px 15px;
+        border-bottom: 1px solid var(--primary-border-color);
+        color: var(--primary-text-color);
+        cursor: pointer;
+      }
 
-        .name.selected {
-            border-left: 4px solid var(--primary-text-color);
-            font-weight: bold;
-        }
+      .name.selected {
+        border-left: 4px solid var(--primary-text-color);
+        font-weight: bold;
+      }
     }
+  }
 
-    .preview {
-        flex: 1;
-        margin: 10px 10px 10px 20px;
-    }
+  .preview {
+    flex: 1;
+    margin: 10px 10px 10px 20px;
+  }
 }
