--- a/src/components/layouts/LabelInstanceTableLayout.scss
+++ b/src/components/layouts/LabelInstanceTableLayout.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
 
-    .table-item {
+    > .table-item {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -10,14 +10,14 @@
         padding-bottom: 20px;
         cursor: pointer;
 
-        .title {
+        > .title {
             padding-right: 10px;
             margin-right: 10px;
             flex: 0 0 200px;
             text-align: right;
         }
 
-        .title.selected {
+        > .title.selected {
             font-weight: bold;
         }
     }
