--- a/src/components/layouts/TabsLayout.scss
+++ b/src/components/layouts/TabsLayout.scss
@@ -1,16 +1,16 @@
 .rcw-tabs-layout {
-    .tabs-header {
+    > .tabs-header {
         display: flex;
         margin-bottom: 5px;
 
-        .tab-header {
+        > .tab-header {
             display: flex;
             padding: 10px 20px 10px 10px;
             border-bottom: 2px solid #888;
             cursor: pointer;
         }
 
-        .tab-header.selected {
+        > .tab-header.selected {
             font-weight: bold;
             border-bottom: 2px solid #000;
         }
