use css grid for main layout

--- a/src/components/viewer/RegistrySelection.scss
+++ b/src/components/viewer/RegistrySelection.scss
@@ -1,23 +1,16 @@
 .rcw-registry-selection {
   display: flex;
-  flex: 0 0 28px;
-  border-bottom: 1px var(--rcw-secondary-border-color) solid;
+  align-items: center;
+  height: 100%;
 
-  > .tabs-selection {
-    display: flex;
-    font-size: 12px;
+  > .tab {
+    color: var(--rcw-secondary-text-color);
+    padding: 0 15px;
 
-    > .tab {
-      display: flex;
-      align-items: center;
-      color: var(--rcw-secondary-text-color);
-      padding: 0 15px;
+    cursor: pointer;
+  }
 
-      cursor: pointer;
-    }
-
-    > .tab.selected {
-      color: var(--rcw-attention-text-color);
-    }
+  > .tab.selected {
+    color: var(--rcw-attention-text-color);
   }
 }
