--- a/src/components/viewer/ComponentsViewer.scss
+++ b/src/components/viewer/ComponentsViewer.scss
@@ -17,42 +17,50 @@ body {
   font-size: 14px;
   font-family: Verdana, serif;
 
-  display: flex;
-  flex-direction: column;
+  display: grid;
+
+  grid-template-columns: 280px 1fr;
+  grid-template-rows: 28px 34px 1fr;
+
+  grid-template-areas: "registry-selection registry-selection" "search-box preview" "toc preview";
 
   min-height: 100vh;
   max-height: 100vh;
   min-width: 100vw;
   max-width: 100vw;
 
-  > .toc-panel-and-preview {
-    display: flex;
-    flex: 1;
+  > .registry-selection-panel {
+    grid-area: registry-selection;
+    border-bottom: 1px var(--rcw-secondary-border-color) solid;
+  }
 
-    > .toc-panel {
-      display: flex;
-      flex: 0 0 280px;
-      flex-direction: column;
+  > .search-box {
+    grid-area: search-box;
+    border-right: 1px solid var(--rcw-primary-border-color);
 
-      border-right: 1px solid var(--rcw-primary-border-color);
+    input {
+      width: 100%;
+      height: 34px;
+      box-sizing: border-box;
 
-      .search-box input {
-        width: 100%;
-        height: 34px;
-        box-sizing: border-box;
+      padding: 10px 4px 10px 15px;
+      margin: 0;
 
-        padding: 10px 4px 10px 15px;
-        margin: 0;
-
-        border: none;
-        outline: none;
-      }
+      border: none;
+      outline: none;
     }
+  }
 
-    > .preview {
-      flex: 1;
-      margin: 10px 10px 10px 20px;
-      overflow: auto;
-    }
+  > .toc-panel {
+    grid-area: toc;
+
+    background-color: var(--rcw-primary-background-color);
+    border-right: 1px solid var(--rcw-primary-border-color);
+  }
+
+  > .preview {
+    grid-area: preview;
+    margin: 10px 10px 10px 20px;
+    overflow: auto;
   }
 }
