--- a/src/components/viewer/toc/TableOfContents.scss
+++ b/src/components/viewer/toc/TableOfContents.scss
@@ -1,11 +1,12 @@
 .rcw-toc {
   display: flex;
   flex-direction: column;
-  flex: 1;
-  background-color: var(--rcw-primary-background-color);
 
   .name {
     font-size: 14px;
+    white-space: nowrap;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
     padding: 8px 15px;
     border-bottom: 1px solid var(--rcw-primary-border-color);
     color: var(--rcw-primary-text-color);
