fix vertical scroll

--- a/src/components/layouts/LabelInstanceTableLayout.scss
+++ b/src/components/layouts/LabelInstanceTableLayout.scss
@@ -9,6 +9,8 @@
         padding-bottom: 20px;
 
         > .title {
+            font-family: var(--rcw-font-family);
+
             padding-right: 10px;
             margin-right: 10px;
             flex: 0 0 200px;
