--- a/src/components/viewer/ComponentDemo.scss
+++ b/src/components/viewer/ComponentDemo.scss
@@ -1,6 +1,7 @@
 .rcw-component-demo {
   > .group-with-description {
     > .description {
+      font-family: var(--rcw-font-family);
       color: var(--rcw-primary-text-color);
       margin-bottom: 10px;
     }
