--- a/src/components/layouts/GridLayout.scss
+++ b/src/components/layouts/GridLayout.scss
@@ -1,14 +1,15 @@
 .rcw-grid-layout {
     display: grid;
     grid-gap: 20px;
-    //grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 
     > .grid-item {
         display: flex;
         flex-direction: column;
 
         > .title {
+            font-family: var(--rcw-font-family);
             font-size: 12px;
+
             padding-bottom: 2px;
             margin-bottom: 6px;
             border-bottom: solid 1px #ddd;
