--- a/src/components/layouts/TabsLayout.scss
+++ b/src/components/layouts/TabsLayout.scss
@@ -1,6 +1,8 @@
 .rcw-tabs-layout {
     > .tabs-header {
         display: flex;
+        font-family: var(--rcw-font-family);
+
         margin-bottom: 5px;
 
         > .tab-header {
