--- a/src/components/viewer/ComponentsViewer.scss
+++ b/src/components/viewer/ComponentsViewer.scss
@@ -1,4 +1,5 @@
 :root {
+  --rcw-font-family: Verdana, serif;
   --rcw-primary-text-color: #555;
   --rcw-primary-background-color: #f2f2f2;
   --rcw-primary-border-color: #ddd;
@@ -15,7 +16,6 @@ body {
 
 .rcw-components-viewer {
   font-size: 14px;
-  font-family: Verdana, serif;
 
   display: grid;
 
@@ -34,16 +34,22 @@ body {
 
   > .registry-selection-panel {
     grid-area: registry-selection;
+    font-family: var(--rcw-font-family);
+
     border-bottom: 1px var(--rcw-secondary-border-color) solid;
   }
 
   > .toolbar-panel {
     grid-area: tool-bar;
+    font-family: var(--rcw-font-family);
+
     border-bottom: 1px var(--rcw-secondary-border-color) solid;
   }
 
   > .search-box {
     grid-area: search-box;
+    font-family: var(--rcw-font-family);
+
     border-right: 1px solid var(--rcw-primary-border-color);
 
     input {
@@ -61,14 +67,18 @@ body {
 
   > .toc-panel {
     grid-area: toc;
+    font-family: var(--rcw-font-family);
 
     background-color: var(--rcw-primary-background-color);
     border-right: 1px solid var(--rcw-primary-border-color);
+
+    overflow: auto;
   }
 
   > .preview {
     grid-area: preview;
     margin: 10px 10px 10px 20px;
+
     overflow: auto;
   }
 }
