--- a/src/components/viewer/Toolbar.css
+++ b/src/components/viewer/Toolbar.css
@@ -2,9 +2,9 @@
     display: flex;
     align-items: center;
     height: 100%;
+}
 
-    > .action {
-        margin: 6px;
-        cursor: pointer;
-    }
+.rcw-toolbar-action {
+    margin: 6px;
+    cursor: pointer;
 }
