handle fullscreen shortcut. change fullscreen icon

--- a/src/components/viewer/toolbar/Toolbar.css
+++ b/src/components/viewer/toolbar/Toolbar.css
@@ -2,9 +2,10 @@
     display: flex;
     align-items: center;
     height: 100%;
+    margin-right: 20px;
 }
 
 .rcw-toolbar-action {
-    margin: 6px;
+    line-height: 1;
     cursor: pointer;
 }
