--- a/src/components/layouts/TabsLayout.css
+++ b/src/components/layouts/TabsLayout.css
@@ -2,17 +2,24 @@
     display: flex;
     font-family: var(--rcw-font-family);
 
+    background-color: #f5f5f5;
+
+    border-bottom: 1px solid #ccc;
     margin-bottom: 5px;
 }
 
 .rcw-tabs-layout-tab-header {
     display: flex;
-    padding: 10px 20px 10px 10px;
-    border-bottom: 2px solid #888;
+
+    color: #999;
+    padding: 7px 20px 7px 10px;
+
     cursor: pointer;
 }
 
 .rcw-tabs-layout-tab-header.selected {
-    font-weight: bold;
-    border-bottom: 2px solid #000;
+    color: #222;
+
+    border-bottom: 1px solid #000;
+    margin-bottom: -1px;
 }
