--- a/src/components/viewer/ComponentsViewer.css
+++ b/src/components/viewer/ComponentsViewer.css
@@ -1,22 +1,22 @@
 :root {
-  --rcw-font-family: Verdana, serif;
-  --rcw-font-size: 14px;
-  --rcw-primary-text-color: #555;
-  --rcw-primary-background-color: #f2f2f2;
-  --rcw-primary-border-color: #ddd;
-  --rcw-secondary-text-color: #313149;
-  --rcw-secondary-border-color: #c8c4c1;
-  --rcw-secondary-background-color: #747780;
-  --rcw-selected-background-color: #313149;
-  --rcw-attention-text-color: #e38a59;
-  --rcw-drop-down-width: 200px;
+  --rcv-font-family: Verdana, serif;
+  --rcv-font-size: 14px;
+  --rcv-primary-text-color: #555;
+  --rcv-primary-background-color: #f2f2f2;
+  --rcv-primary-border-color: #ddd;
+  --rcv-secondary-text-color: #313149;
+  --rcv-secondary-border-color: #c8c4c1;
+  --rcv-secondary-background-color: #747780;
+  --rcv-selected-background-color: #313149;
+  --rcv-attention-text-color: #e38a59;
+  --rcv-drop-down-width: 200px;
 }
 
 body {
   margin: 0;
 }
 
-.rcw-components-viewer {
+.rcv-components-viewer {
   display: grid;
 
   grid-template-columns: 280px 1fr auto;
@@ -33,34 +33,34 @@ body {
   max-width: 100vw;
 }
 
-.rcw-registry-selection-panel {
+.rcv-registry-selection-panel {
   grid-area: registry-selection;
 
-  font-size: var(--rcw-font-size);
-  font-family: var(--rcw-font-family);
+  font-size: var(--rcv-font-size);
+  font-family: var(--rcv-font-family);
 
-  border-bottom: 1px var(--rcw-secondary-border-color) solid;
+  border-bottom: 1px var(--rcv-secondary-border-color) solid;
 }
 
-.rcw-toolbar-panel {
+.rcv-toolbar-panel {
   grid-area: tool-bar;
 
-  font-size: var(--rcw-font-size);
-  font-family: var(--rcw-font-family);
+  font-size: var(--rcv-font-size);
+  font-family: var(--rcv-font-family);
 
-  border-bottom: 1px var(--rcw-secondary-border-color) solid;
+  border-bottom: 1px var(--rcv-secondary-border-color) solid;
 }
 
-.rcw-search-box {
+.rcv-search-box {
   grid-area: search-box;
 
-  font-size: var(--rcw-font-size);
-  font-family: var(--rcw-font-family);
+  font-size: var(--rcv-font-size);
+  font-family: var(--rcv-font-family);
 
-  border-right: 1px solid var(--rcw-primary-border-color);
+  border-right: 1px solid var(--rcv-primary-border-color);
 }
 
-.rcw-search-box-input {
+.rcv-search-box-input {
   width: 100%;
   height: 34px;
   box-sizing: border-box;
@@ -72,19 +72,19 @@ body {
   outline: none;
 }
 
-.rcw-toc-panel {
+.rcv-toc-panel {
   grid-area: toc;
 
-  font-size: var(--rcw-font-size);
-  font-family: var(--rcw-font-family);
+  font-size: var(--rcv-font-size);
+  font-family: var(--rcv-font-family);
 
-  background-color: var(--rcw-primary-background-color);
-  border-right: 1px solid var(--rcw-primary-border-color);
+  background-color: var(--rcv-primary-background-color);
+  border-right: 1px solid var(--rcv-primary-border-color);
 
   overflow: auto;
 }
 
-.rcw-preview {
+.rcv-preview {
   grid-area: preview;
   margin: 10px 10px 10px 20px;
 
