--- a/documentation/rcv/src/components/Layout.css
+++ b/documentation/rcv/src/components/Layout.css
@@ -1,9 +1,13 @@
+:root {
+    --rcv-doc-left-gap: 48px;
+    --rcv-doc-right-gap: 48px;
+    --rcv-content-width: 920px;
+}
+
 body {
     margin: 0;
     padding: 0;
     font-family: Verdana, serif;
-
-    --rcv-doc-left-gap: 48px;
 }
 
 .layout {
@@ -23,15 +27,22 @@ body {
 }
 
 .layout .top-panel {
-    display: flex;
-    align-items: center;
-    padding-left: var(--rcv-doc-left-gap);
     background-color: #5b6271;
     color: white;
 }
 
+.top-panel-content {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: var(--rcv-content-width);
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .layout .content-panel {
     padding-left: var(--rcv-doc-left-gap);
+    padding-right: var(--rcv-doc-right-gap);
     overflow: auto;
 }
 
@@ -59,4 +70,12 @@ body {
     margin: 24px;
 
     z-index: 1001;
+}
+
+@media (max-width: 960px) {
+    :root {
+        --rcv-doc-left-gap: 8px;
+        --rcv-doc-right-gap: 8px;
+        --rcv-content-width: 100%;
+    }
 }
