--- a/documentation/rcv/src/components/TwoSides.css
+++ b/documentation/rcv/src/components/TwoSides.css
@@ -1,5 +1,12 @@
 .two-side {
     display: grid;
-    grid-template-columns: 740px 1fr;
-    grid-column-gap: 24px;
+    grid-template-columns: auto;
+    padding-right: 16px;
+}
+
+@media (min-width: 1100px) {
+    .two-side {
+        grid-template-columns: 740px 1fr;
+        grid-column-gap: 24px;
+    }
 }
